# FirstGameEngine

./: .gitignore  CMakeLists.txt  README.md
.zed/: debug.json  tasks.json
core/: CMakeLists.txt
core/AssetManager/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt
core/Collision/: AABB.hpp  CMakeLists.txt
core/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
core/Event/: CMakeLists.txt  Event.cpp  Event.hpp
core/Game/: CMakeLists.txt  Game.cpp  Game.hpp
core/Graphics/: CMakeLists.txt
core/Graphics/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp
core/Graphics/Mesh/: CMakeLists.txt  Cube.cpp  Cube.hpp  Mesh.cpp  Mesh.hpp
core/Graphics/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
core/Graphics/Renderer/EBO/: EBO.cpp  EBO.hpp
core/Graphics/Renderer/Shader/: Shader.cpp  Shader.hpp
core/Graphics/Renderer/Texture/: Texture.cpp  Texture.hpp
core/Graphics/Renderer/VAO/: VAO.cpp  VAO.hpp
core/Graphics/Renderer/VBO/: VBO.cpp  VBO.hpp
core/Input/: CMakeLists.txt  Input.cpp  Input.hpp
core/Logic/: CMakeLists.txt  Logic.hpp
core/Physics/: CMakeLists.txt  Physics.cpp  Physics.hpp
core/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
core/Window/: CMakeLists.txt  Window.cpp  Window.hpp
game/: GameLogic.hpp  main.cpp
gameApp/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp  main.cpp
gameApp/Camera/: freeCam.cpp  freeCam.hpp
gameApp/shader/: shader.frag  shader.vert
